--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "dev:4000": "PORT=4000 ts-node-dev --respawn --transpile-only src/index.ts",
-    "dev:5000": "PORT=5000 ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "tsx watch src/index.ts",
+    "dev:4000": "PORT=4000 tsx watch src/index.ts",
+    "dev:5000": "PORT=5000 tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
-    "@neynar/nodejs-sdk": "*",
     "@fastify/static": "^7.0.4",
-    "ethers": "^6.13.4",
+    "@neynar/nodejs-sdk": "*",
     "dotenv": "^16.4.5",
+    "ethers": "^6.13.4",
     "fastify": "^4.28.1",
     "zod": "^3.23.8"
   },
@@ -26,7 +26,7 @@
     "@types/node": "^22.7.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.6.3"
   }
 }
-
